tests/ui/cached_const_generic_requires_convert.stderr
error: #[cached] on a generic function requires `key` + `convert` to pin the cache key to a concrete type: the cache is a single monomorphic static shared across all instantiations and cannot name the function's type parameters. Provide `key`/`convert` (and `ty`/`create` if the value type is also generic), or wrap the generic function in a non-generic `#[cached]` function per concrete type.
 --> tests/ui/cached_const_generic_requires_convert.rs:7:4
  |
7 | fn f<const N: usize>(x: i32) -> i32 {
  |    ^
